2024-10-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release version

	* inst/include/rcpp_sink.h: Move C++20 or greater check here, micro edit

2024-10-29  Xanthos Xanthopoulos  <xanxanthopoulos@gmail.com>

	* inst/include/rcpp_sink.h: Use spdlog::memory_buf_t as string when
	building under C++20 with SPDLOG_USE_STD_FORMAT
	* inst/include/RcppSpdlog_types.h: Abort compilation if
	SPDLOG_USE_STD_FORMAT without C++20 or greater
	* inst/include/spdl.h: Use std::vformat if SPDLOG_USE_STD_FORMAT flag
	is set
	* src/formatter.cpp: Idem

2024-10-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release version

2024-10-13  Contantinos Giachalis  <cgiachalis@outlook.com>

	* src/interface.cpp (log_setup): Documentation fix for duplicate log level
	* man/log_setup.Rd: Idem
	* R/RcppExports.R: Idem

2024-09-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.18

2024-09-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release version

	* src/interface.cpp (log_setup): Also support environment-level
	setter via `SPDLOG_LEVEL`
	* inst/include/RcppSpdlog: Include spdlog/cfg/env.h as now needed

2024-05-17  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-05-05  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/spdlog/*: New upstream release spdlog 1.14.1

2024-04-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.17

	* inst/include/spdlog/*: New upstream release spdlog 1.14.0

2024-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2024-01-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Version 0.0.16

	* inst/include/spdlog/*: New upstream release spdlog 1.13.0

2023-11-29  Dirk Eddelbuettel  <edd@debian.org>
