@@ -1,3 +1,11 @@
+2024-11-10  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/formatter.cpp: Partially revert / simplify previous PR
+
+2024-11-09  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/spdlog/*: New upstream release spdlog 1.15.0
+
 2024-10-29  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro release version
